--- a/packages/controls/package.json
+++ b/packages/controls/package.json
@@ -78,6 +78,7 @@
     "d3-format": "^1.3.0",
     "jquery": "^3.1.1",
     "jquery-ui": "^1.12.1",
-    "underscore": "^1.8.3"
+    "underscore": "^1.8.3",
+    "screenfull": "^3.3.3"
   }
 }
