--- a/packages/controls/package.json
+++ b/packages/controls/package.json
@@ -35,18 +35,18 @@
   },
   "dependencies": {
     "@jupyter-widgets/base": "^6.0.2",
-    "@lumino/algorithm": "^1.9.1",
-    "@lumino/domutils": "^1.8.1",
-    "@lumino/messaging": "^1.10.1",
-    "@lumino/signaling": "^1.10.1",
-    "@lumino/widgets": "^1.30.0",
+    "@lumino/algorithm": "^1.9.1 || ^2.0.0-beta.1",
+    "@lumino/domutils": "^1.8.1 || ^2.0.0-beta.1",
+    "@lumino/messaging": "^1.10.1 || ^2.0.0-beta.1",
+    "@lumino/signaling": "^1.10.1 || ^2.0.0-beta.1",
+    "@lumino/widgets": "^1.30.0 || ^2.0.0-beta.1",
     "d3-color": "^3.0.1",
     "d3-format": "^3.0.1",
     "jquery": "^3.1.1",
     "nouislider": "15.4.0"
   },
   "devDependencies": {
-    "@jupyterlab/services": "^6.0.0",
+    "@jupyterlab/services": "^6.0.0 || ^7.0.0-alpha.18",
     "@types/d3-color": "^3.0.2",
     "@types/d3-format": "^3.0.1",
     "@types/expect.js": "^0.3.29",
