--- a/packages/html-manager/package.json
+++ b/packages/html-manager/package.json
@@ -41,11 +41,11 @@
     "@jupyter-widgets/controls": "^5.0.3",
     "@jupyter-widgets/output": "^6.0.2",
     "@jupyter-widgets/schema": "^0.5.1",
-    "@jupyterlab/outputarea": "^3.0.0",
-    "@jupyterlab/rendermime": "^3.0.0",
-    "@jupyterlab/rendermime-interfaces": "^3.0.0",
-    "@lumino/messaging": "^1.10.1",
-    "@lumino/widgets": "^1.30.0",
+    "@jupyterlab/outputarea": "^3.0.0 || ^4.0.0-alpha.18",
+    "@jupyterlab/rendermime": "^3.0.0 || ^4.0.0-alpha.18",
+    "@jupyterlab/rendermime-interfaces": "^3.0.0 || ^4.0.0-alpha.18",
+    "@lumino/messaging": "^1.10.1 || ^2.0.0-beta.1",
+    "@lumino/widgets": "^1.30.0 || ^2.0.0-beta.1",
     "ajv": "^8.6.0",
     "jquery": "^3.1.1"
   },
