--- a/python/widgetsnbextension/package.json
+++ b/python/widgetsnbextension/package.json
@@ -27,9 +27,9 @@
     "@jupyter-widgets/controls": "^5.0.3",
     "@jupyter-widgets/html-manager": "^1.0.5",
     "@jupyter-widgets/output": "^6.0.2",
-    "@jupyterlab/services": "^6.0.0",
-    "@lumino/messaging": "^1.10.1",
-    "@lumino/widgets": "^1.30.0",
+    "@jupyterlab/services": "^6.0.0 || ^7.0.0-alpha.18",
+    "@lumino/messaging": "^1.10.1 || ^2.0.0-beta.1",
+    "@lumino/widgets": "^1.30.0 || ^2.0.0-beta.1",
     "backbone": "1.4.0"
   },
   "devDependencies": {
