--- a/packages/controls/package.json
+++ b/packages/controls/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@jupyter-widgets/controls",
-  "version": "3.1.5",
+  "name": "jupyter-controls7",
+  "version": "3.1.7",
   "description": "Jupyter interactive widgets",
   "repository": {
     "type": "git",
